--- a/dmu24/dmu24_Bootes/1_Cross_in_help_ids.ipynb
+++ b/dmu24/dmu24_Bootes/1_Cross_in_help_ids.ipynb
@@ -116,7 +116,7 @@
      "data": {
       "text/html": [
        "<i>Table length=5</i>\n",
-       "<table id=\"table4704981680\" class=\"table-striped table-bordered table-condensed\">\n",
+       "<table id=\"table139810109460040\" class=\"table-striped table-bordered table-condensed\">\n",
        "<thead><tr><th>help_id</th><th>brown_i_id</th><th>brown_irac_id</th></tr></thead>\n",
        "<thead><tr><th>bytes27</th><th>int64</th><th>int64</th></tr></thead>\n",
        "<tr><td>HELP_J142500.285+331035.838</td><td>394263</td><td>-1</td></tr>\n",
@@ -156,7 +156,7 @@
      "data": {
       "text/html": [
        "<i>Table length=5</i>\n",
-       "<table id=\"table4704982520\" class=\"table-striped table-bordered table-condensed\">\n",
+       "<table id=\"table139810106503576\" class=\"table-striped table-bordered table-condensed\">\n",
        "<thead><tr><th>ID</th><th>ID_SPITZER</th><th>ID_OPTICAL</th><th>z1_median</th><th>brown_i_id</th><th>brown_irac_id</th></tr></thead>\n",
        "<thead><tr><th>int64</th><th>int64</th><th>int64</th><th>float64</th><th>int64</th><th>int64</th></tr></thead>\n",
        "<tr><td>0</td><td>-99</td><td>1</td><td>3.6887</td><td>1</td><td>-99</td></tr>\n",
@@ -205,7 +205,7 @@
     ")\n",
     "new_cat=vstack([new_cat_i,new_cat_irac_only])\n",
     "\n",
-    "new_cat= new_cat_i"
+    "#new_cat= new_cat_i"
    ]
   },
   {
@@ -251,7 +251,7 @@
     {
      "data": {
       "text/plain": [
-       "409543"
+       "0"
       ]
      },
      "execution_count": 10,
@@ -300,7 +300,7 @@
     {
      "data": {
       "text/plain": [
-       "1657863"
+       "2214845"
       ]
      },
      "execution_count": 13,
@@ -320,7 +320,7 @@
     {
      "data": {
       "text/plain": [
-       "1657470"
+       "1657471"
       ]
      },
      "execution_count": 14,
@@ -340,7 +340,7 @@
     {
      "data": {
       "text/plain": [
-       "393"
+       "557374"
       ]
      },
      "execution_count": 15,
@@ -362,7 +362,7 @@
      "data": {
       "text/html": [
        "<i>Table length=2</i>\n",
-       "<table id=\"table4705455632\" class=\"table-striped table-bordered table-condensed\">\n",
+       "<table id=\"table139810106857680\" class=\"table-striped table-bordered table-condensed\">\n",
        "<thead><tr><th>brown_i_id</th><th>z1_median</th><th>help_id</th><th>brown_irac_id</th></tr></thead>\n",
        "<thead><tr><th>int64</th><th>float64</th><th>bytes27</th><th>int64</th></tr></thead>\n",
        "<tr><td>778164</td><td>1.0382</td><td>HELP_J143841.165+335004.237</td><td>-1</td></tr>\n",
@@ -407,7 +407,7 @@
      "data": {
       "text/html": [
        "<i>Table length=1</i>\n",
-       "<table id=\"table4705454456\" class=\"table-striped table-bordered table-condensed\">\n",
+       "<table id=\"table139810106477312\" class=\"table-striped table-bordered table-condensed\">\n",
        "<thead><tr><th>brown_i_id</th><th>z1_median</th><th>help_id</th><th>brown_irac_id</th></tr></thead>\n",
        "<thead><tr><th>int64</th><th>float64</th><th>bytes27</th><th>int64</th></tr></thead>\n",
        "<tr><td>778164</td><td>1.0382</td><td>HELP_J143841.165+335004.237</td><td>-1</td></tr>\n",
@@ -438,7 +438,7 @@
     {
      "data": {
       "text/plain": [
-       "1657470"
+       "1657471"
       ]
      },
      "execution_count": 19,
@@ -479,18 +479,18 @@
      "data": {
       "text/html": [
        "<i>Table length=10</i>\n",
-       "<table id=\"table4705358736-934569\" class=\"table-striped table-bordered table-condensed\">\n",
+       "<table id=\"table139810106476584-857746\" class=\"table-striped table-bordered table-condensed\">\n",
        "<thead><tr><th>idx</th><th>brown_i_id</th><th>z1_median</th><th>help_id</th><th>brown_irac_id</th></tr></thead>\n",
-       "<tr><td>0</td><td>1788580</td><td>0.9797</td><td>HELP_J142433.597+352308.103</td><td>-1</td></tr>\n",
-       "<tr><td>1</td><td>1891099</td><td>0.8861</td><td>HELP_J142433.602+353326.121</td><td>-1</td></tr>\n",
-       "<tr><td>2</td><td>1997888</td><td>0.7447</td><td>HELP_J142433.609+354416.174</td><td>-1</td></tr>\n",
-       "<tr><td>3</td><td>1776606</td><td>1.8403</td><td>HELP_J142433.611+352156.195</td><td>-1</td></tr>\n",
-       "<tr><td>4</td><td>1780409</td><td>0.3033</td><td>HELP_J142433.614+352219.215</td><td>-1</td></tr>\n",
-       "<tr><td>5</td><td>2003639</td><td>1.7235</td><td>HELP_J142433.614+354452.719</td><td>-1</td></tr>\n",
-       "<tr><td>6</td><td>1729999</td><td>0.3968</td><td>HELP_J142433.625+351736.189</td><td>-1</td></tr>\n",
-       "<tr><td>7</td><td>1888110</td><td>2.416</td><td>HELP_J142433.629+353308.009</td><td>-1</td></tr>\n",
-       "<tr><td>8</td><td>2000812</td><td>0.7871</td><td>HELP_J142433.635+354435.055</td><td>-1</td></tr>\n",
-       "<tr><td>9</td><td>2029549</td><td>4.2342</td><td>HELP_J142433.641+354736.024</td><td>-1</td></tr>\n",
+       "<tr><td>0</td><td>299759</td><td>0.7223</td><td>0.0</td><td>999999</td></tr>\n",
+       "<tr><td>1</td><td>1788580</td><td>0.9797</td><td>HELP_J142433.597+352308.103</td><td>-1</td></tr>\n",
+       "<tr><td>2</td><td>1891099</td><td>0.8861</td><td>HELP_J142433.602+353326.121</td><td>-1</td></tr>\n",
+       "<tr><td>3</td><td>1997888</td><td>0.7447</td><td>HELP_J142433.609+354416.174</td><td>-1</td></tr>\n",
+       "<tr><td>4</td><td>1776606</td><td>1.8403</td><td>HELP_J142433.611+352156.195</td><td>-1</td></tr>\n",
+       "<tr><td>5</td><td>1780409</td><td>0.3033</td><td>HELP_J142433.614+352219.215</td><td>-1</td></tr>\n",
+       "<tr><td>6</td><td>2003639</td><td>1.7235</td><td>HELP_J142433.614+354452.719</td><td>-1</td></tr>\n",
+       "<tr><td>7</td><td>1729999</td><td>0.3968</td><td>HELP_J142433.625+351736.189</td><td>-1</td></tr>\n",
+       "<tr><td>8</td><td>1888110</td><td>2.416</td><td>HELP_J142433.629+353308.009</td><td>-1</td></tr>\n",
+       "<tr><td>9</td><td>2000812</td><td>0.7871</td><td>HELP_J142433.635+354435.055</td><td>-1</td></tr>\n",
        "</table><style>table.dataTable {clear: both; width: auto !important; margin: 0 !important;}\n",
        ".dataTables_info, .dataTables_length, .dataTables_filter, .dataTables_paginate{\n",
        "display: inline-block; margin-right: 1em; }\n",
@@ -514,14 +514,14 @@
        "    datatables: 'https://cdn.datatables.net/1.10.12/js/jquery.dataTables.min'\n",
        "}});\n",
        "require([\"datatables\"], function(){\n",
-       "    console.log(\"$('#table4705358736-934569').dataTable()\");\n",
+       "    console.log(\"$('#table139810106476584-857746').dataTable()\");\n",
        "    \n",
        "jQuery.extend( jQuery.fn.dataTableExt.oSort, {\n",
        "    \"optionalnum-asc\": astropy_sort_num,\n",
        "    \"optionalnum-desc\": function (a,b) { return -astropy_sort_num(a, b); }\n",
        "});\n",
        "\n",
-       "    $('#table4705358736-934569').dataTable({\n",
+       "    $('#table139810106476584-857746').dataTable({\n",
        "        order: [],\n",
        "        pageLength: 50,\n",
        "        lengthMenu: [[10, 25, 50, 100, 500, 1000, -1], [10, 25, 50, 100, 500, 1000, 'All']],\n",
@@ -586,7 +586,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.10"
+   "version": "3.7.2"
   }
  },
  "nbformat": 4,
