--- a/dmu32/dmu32_GAMA-12/GAMA-12_catalogue_merging.ipynb
+++ b/dmu32/dmu32_GAMA-12/GAMA-12_catalogue_merging.ipynb
@@ -447,25 +447,33 @@
     "    cigale['id'].name = \"help_id\"\n",
     "\n",
     "    # We convert the various Chi2 and threshold to flags\n",
-    "    flag_cigale_opt = cigale[\"UVoptIR_OPTchi2\"] <= cigale[\"UVoptIR_OPTchi2_threshold\"]\n",
-    "    flag_cigale_ir = cigale[\"UVoptIR_IRchi2\"] <= cigale[\"UVoptIR_IRchi2_threshold\"]\n",
-    "    flag_cigale = (\n",
-    "        (cigale[\"UVoptIR_best.reduced_chi_square\"] \n",
-    "             <=  cigale[\"UVoptIR_best.reduced_chi_square_threshold\"]) &\n",
-    "        flag_cigale_opt & flag_cigale_ir)\n",
-    "    flag_cigale_ironly = cigale[\"IRonly_IRchi2\"] <= cigale[\"IRonly_IRchi2_threshold\"]\n",
+    "    # UPDATE - we no longer do this and instead provide the chi2 values \n",
+    "    #flag_cigale_opt = cigale[\"UVoptIR_OPTchi2\"] <= cigale[\"UVoptIR_OPTchi2_threshold\"]\n",
+    "    #flag_cigale_ir = cigale[\"UVoptIR_IRchi2\"] <= cigale[\"UVoptIR_IRchi2_threshold\"]\n",
+    "    #flag_cigale = (\n",
+    "    #    (cigale[\"UVoptIR_best.reduced_chi_square\"] \n",
+    "    #         <=  cigale[\"UVoptIR_best.reduced_chi_square_threshold\"]) &\n",
+    "    #    flag_cigale_opt & flag_cigale_ir)\n",
+    "    #flag_cigale_ironly = cigale[\"IRonly_IRchi2\"] <= cigale[\"IRonly_IRchi2_threshold\"]\n",
     "\n",
-    "    cigale.add_columns([\n",
-    "        MaskedColumn(flag_cigale, \"flag_cigale\", \n",
-    "                     dtype=int, fill_value=-1),\n",
-    "        MaskedColumn(flag_cigale_opt, \"flag_cigale_opt\", \n",
-    "                     dtype=int, fill_value=-1),\n",
-    "        MaskedColumn(flag_cigale_ir, \"flag_cigale_ir\", \n",
-    "                     dtype=int, fill_value=-1),\n",
-    "        MaskedColumn(flag_cigale_ironly, \"flag_cigale_ironly\", \n",
-    "                     dtype=int, fill_value=-1)\n",
-    "    ])\n",
-    "\n",
+    "    #cigale.add_columns([\n",
+    "    #    MaskedColumn(flag_cigale, \"flag_cigale\", \n",
+    "    #                 dtype=int, fill_value=-1),\n",
+    "    #    MaskedColumn(flag_cigale_opt, \"flag_cigale_opt\", \n",
+    "    #                 dtype=int, fill_value=-1),\n",
+    "    #    MaskedColumn(flag_cigale_ir, \"flag_cigale_ir\", \n",
+    "    #                 dtype=int, fill_value=-1),\n",
+    "    #    MaskedColumn(flag_cigale_ironly, \"flag_cigale_ironly\", \n",
+    "    #                 dtype=int, fill_value=-1)\n",
+    "    #])\n",
+    "    \n",
+    "    #UPDATE Instead of flags above we include all cols used to make \n",
+    "    #deprecated flags\n",
+    "    cigale[\"UVoptIR_OPTchi2\"].name                 =  \"cigale_chi2_opt\"\n",
+    "    cigale[\"UVoptIR_IRchi2\"].name                  =  \"cigale_chi2_ir\"\n",
+    "    cigale[\"UVoptIR_best.reduced_chi_square\"].name =  \"cigale_chi2_red\"\n",
+    "    cigale[\"IRonly_IRchi2\"].name                   =  \"cigale_chi2_ironly\"\n",
+    "    \n",
     "    cigale['UVoptIR_bayes.stellar.m_star'].name =  \"cigale_mstar\"\n",
     "    cigale['UVoptIR_bayes.stellar.m_star_err'].name = \"cigale_mstar_err\"\n",
     "    cigale['UVoptIR_bayes.sfh.sfr10Myrs'].name = \"cigale_sfr\"\n",
@@ -478,8 +486,11 @@
     "    cigale = cigale['help_id', 'cigale_mstar', 'cigale_mstar_err', 'cigale_sfr',\n",
     "                    'cigale_sfr_err', 'cigale_dustlumin', 'cigale_dustlumin_err', \n",
     "                    'cigale_dustlumin_ironly', 'cigale_dustlumin_ironly_err', \n",
-    "                    'flag_cigale', 'flag_cigale_opt', 'flag_cigale_ir', \n",
-    "                    'flag_cigale_ironly']"
+    "                    #Old flags\n",
+    "                    #'flag_cigale', 'flag_cigale_opt', 'flag_cigale_ir', 'flag_cigale_ironly'\n",
+    "                    #New chi2 values\n",
+    "                    \"cigale_chi2_opt\", \"cigale_chi2_ir\", \"cigale_chi2_red\", \"cigale_chi2_ironly\"\n",
+    "                   ]"
    ]
   },
   {
@@ -547,8 +558,12 @@
     "                columns.append(colname)\n",
     "    columns += ['cigale_mstar', 'cigale_mstar_err', 'cigale_sfr', 'cigale_sfr_err',\n",
     "                'cigale_dustlumin', 'cigale_dustlumin_err', 'cigale_dustlumin_ironly', \n",
-    "                'cigale_dustlumin_ironly_err', 'flag_cigale', 'flag_cigale_opt', \n",
-    "                'flag_cigale_ir', 'flag_cigale_ironly', 'stellarity', \n",
+    "                'cigale_dustlumin_ironly_err', \n",
+    "                #Old flags\n",
+    "                #'flag_cigale', 'flag_cigale_opt', 'flag_cigale_ir', 'flag_cigale_ironly'\n",
+    "                #New chi2 values\n",
+    "                'cigale_chi2_opt', 'cigale_chi2_ir', 'cigale_chi2_red', 'cigale_chi2_ironly',\n",
+    "                'stellarity', \n",
     "                'stellarity_origin', 'flag_cleaned', 'flag_merged', 'flag_gaia', \n",
     "                'flag_optnir_obs', 'flag_optnir_det', 'zspec_qual', \n",
     "                'zspec_association_flag']"
@@ -616,7 +631,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.6.10"
   }
  },
  "nbformat": 4,
