--- a/dmu28/dmu28_HDF-N/CIGALE_catalogue_preparation.ipynb
+++ b/dmu28/dmu28_HDF-N/CIGALE_catalogue_preparation.ipynb
@@ -77,12 +77,12 @@
    },
    "outputs": [],
    "source": [
-    "# good = {}\n",
-    "# for band in ['pacs_green', 'pacs_red', 'spire_250', 'spire_350', 'spire_500']:\n",
-    "#     good[band] = (~np.isnan(master_catalogue['f_{}'.format(band)]) & \n",
-    "#                                    ~master_catalogue['flag_{}'.format(band)])\n",
-    "#     good[band][good[band]] &= (master_catalogue[good[band]]['f_{}'.format(band)] /\n",
-    "#                               master_catalogue[good[band]]['ferr_{}'.format(band)] >= 2)"
+    "good = {}\n",
+    "for band in ['spire_250', 'spire_350', 'spire_500']:\n",
+    "    good[band] = (~np.isnan(master_catalogue['f_{}'.format(band)]) & \n",
+    "                                   ~master_catalogue['flag_{}'.format(band)])\n",
+    "    good[band][good[band]] &= (master_catalogue[good[band]]['f_{}'.format(band)] /\n",
+    "                              master_catalogue[good[band]]['ferr_{}'.format(band)] >= 2)"
    ]
   },
   {
@@ -100,7 +100,7 @@
    },
    "outputs": [],
    "source": [
-    "# combined_good = np.sum(list(good.values()), axis=0) >= 2"
+    "combined_good = np.sum(list(good.values()), axis=0) >= 2"
    ]
   },
   {
@@ -111,7 +111,7 @@
    },
    "outputs": [],
    "source": [
-    "# print(\"Number of good sources: {}\".format(np.sum(combined_good)))"
+    "print(\"Number of good sources: {}\".format(np.sum(combined_good)))"
    ]
   },
   {
@@ -184,7 +184,7 @@
    "outputs": [],
    "source": [
     "#best_catalogue = master_catalogue[combined_good].copy()\n",
-    "best_catalogue = master_catalogue[optnir].copy()"
+    "best_catalogue = master_catalogue[combined_good].copy()"
    ]
   },
   {
@@ -277,7 +277,7 @@
    },
    "outputs": [],
    "source": [
-    "best_catalogue.write(\"data_tmp/HDF-N_cigale_optnir_extcor_{}.fits\".format(SUFFIX), overwrite=True)"
+    "best_catalogue.write(\"data_tmp/HDF-N_cigale_best_extcor_{}.fits\".format(SUFFIX), overwrite=True)"
    ]
   },
   {
@@ -295,7 +295,7 @@
    },
    "outputs": [],
    "source": [
-    "best_catalogue = master_catalogue[optnir].copy()"
+    "best_catalogue = master_catalogue[combined_good].copy()"
    ]
   },
   {
@@ -404,7 +404,7 @@
    },
    "outputs": [],
    "source": [
-    "best_catalogue.write(\"data_tmp/HDF-N_cigale_optnir_extcor_zspec_{}.fits\".format(SUFFIX), overwrite=True)"
+    "best_catalogue.write(\"data_tmp/HDF-N_cigale_best_extcor_zspec_{}.fits\".format(SUFFIX), overwrite=True)"
    ]
   }
  ],
@@ -425,7 +425,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.6.10"
   }
  },
  "nbformat": 4,
