--- a/dmu32/dmu32_XMM-LSS/XMM-LSS_catalogue_merging.ipynb
+++ b/dmu32/dmu32_XMM-LSS/XMM-LSS_catalogue_merging.ipynb
@@ -2098,13 +2098,17 @@
     "                colname = col_tpl.format(band)\n",
     "                if colname in merged_table.colnames:\n",
     "                    columns.append(colname)\n",
-    "        columns += ['cigale_mstar', 'cigale_mstar_err', 'cigale_sfr',\n",
-    "                    'cigale_sfr_err', 'cigale_dustlumin', 'cigale_dustlumin_err', \n",
-    "                    'cigale_dustlumin_ironly', 'cigale_dustlumin_ironly_err', \n",
-    "                    'flag_cigale', 'flag_cigale_opt', 'flag_cigale_ir', \n",
-    "                    'flag_cigale_ironly','stellarity', 'stellarity_origin', 'flag_cleaned',\n",
-    "                    'flag_merged', 'flag_gaia', 'flag_optnir_obs',\n",
-    "                    'flag_optnir_det', 'zspec_qual', 'zspec_association_flag']\n",
+    "        columns += ['cigale_mstar', 'cigale_mstar_err', 'cigale_sfr', 'cigale_sfr_err',\n",
+    "                'cigale_dustlumin', 'cigale_dustlumin_err', 'cigale_dustlumin_ironly', \n",
+    "                'cigale_dustlumin_ironly_err', \n",
+    "                #Old flags\n",
+    "                #'flag_cigale', 'flag_cigale_opt', 'flag_cigale_ir', 'flag_cigale_ironly'\n",
+    "                #New chi2 values\n",
+    "                'cigale_chi2_opt', 'cigale_chi2_ir', 'cigale_chi2_red', 'cigale_chi2_ironly',\n",
+    "                'stellarity', \n",
+    "                'stellarity_origin', 'flag_cleaned', 'flag_merged', 'flag_gaia', \n",
+    "                'flag_optnir_obs', 'flag_optnir_det', 'zspec_qual', \n",
+    "                'zspec_association_flag']\n",
     "    \n",
     "\n",
     "        # Check that we did not forget any column\n",
