--- a/dmu32/3_The_end.ipynb
+++ b/dmu32/3_The_end.ipynb
@@ -25,9 +25,9 @@
      "output_type": "stream",
      "text": [
       "This notebook was run with herschelhelp_internal version: \n",
-      "017bb1e (Mon Jun 18 14:58:59 2018 +0100)\n",
+      "1407877 (Mon Feb 4 12:56:29 2019 +0000)\n",
       "This notebook was executed on: \n",
-      "2019-11-11 11:33:04.673525\n"
+      "2020-10-29 13:15:24.488030\n"
      ]
     }
    ],
@@ -47,13 +47,22 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/opt/pyenv/versions/3.7.2/lib/python3.7/site-packages/matplotlib/__init__.py:855: MatplotlibDeprecationWarning: \n",
-      "examples.directory is deprecated; in the future, examples will be found relative to the 'datapath' directory.\n",
-      "  \"found relative to the 'datapath' directory.\".format(key))\n",
-      "/opt/pyenv/versions/3.7.2/lib/python3.7/site-packages/matplotlib/__init__.py:846: MatplotlibDeprecationWarning: \n",
-      "The text.latex.unicode rcparam was deprecated in Matplotlib 2.2 and will be removed in 3.1.\n",
-      "  \"2.2\", name=key, obj_type=\"rcparam\", addendum=addendum)\n",
-      "/opt/pyenv/versions/3.7.2/lib/python3.7/site-packages/seaborn/apionly.py:9: UserWarning: As seaborn no longer sets a default style on import, the seaborn.apionly module is deprecated. It will be removed in a future version.\n",
+      "/Users/rs548/miniconda3/envs/herschelhelp_internal/lib/python3.6/_collections_abc.py:841: MatplotlibDeprecationWarning: \n",
+      "The examples.directory rcparam was deprecated in Matplotlib 3.0 and will be removed in 3.2. In the future, examples will be found relative to the 'datapath' directory.\n",
+      "  self[key] = other[key]\n",
+      "/Users/rs548/miniconda3/envs/herschelhelp_internal/lib/python3.6/_collections_abc.py:841: MatplotlibDeprecationWarning: \n",
+      "The savefig.frameon rcparam was deprecated in Matplotlib 3.1 and will be removed in 3.3.\n",
+      "  self[key] = other[key]\n",
+      "/Users/rs548/miniconda3/envs/herschelhelp_internal/lib/python3.6/_collections_abc.py:841: MatplotlibDeprecationWarning: \n",
+      "The text.latex.unicode rcparam was deprecated in Matplotlib 3.0 and will be removed in 3.2.\n",
+      "  self[key] = other[key]\n",
+      "/Users/rs548/miniconda3/envs/herschelhelp_internal/lib/python3.6/_collections_abc.py:841: MatplotlibDeprecationWarning: \n",
+      "The verbose.fileo rcparam was deprecated in Matplotlib 3.1 and will be removed in 3.3.\n",
+      "  self[key] = other[key]\n",
+      "/Users/rs548/miniconda3/envs/herschelhelp_internal/lib/python3.6/_collections_abc.py:841: MatplotlibDeprecationWarning: \n",
+      "The verbose.level rcparam was deprecated in Matplotlib 3.1 and will be removed in 3.3.\n",
+      "  self[key] = other[key]\n",
+      "/Users/rs548/miniconda3/envs/herschelhelp_internal/lib/python3.6/site-packages/seaborn/apionly.py:9: UserWarning: As seaborn no longer sets a default style on import, the seaborn.apionly module is deprecated. It will be removed in a future version.\n",
       "  warnings.warn(msg, UserWarning)\n"
      ]
     }
@@ -62,7 +71,7 @@
     "from astropy.table import Table, Column\n",
     "from astropy import units as u\n",
     "import numpy as np\n",
-    "\n",
+    "import glob\n",
     "from pymoc import MOC\n",
     "\n",
     "from herschelhelp_internal.masterlist import find_last_ml_suffix\n",
@@ -88,8 +97,35 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## The definition of HELP DR1\n",
-    "Here we take the DR1 definition from dmu1. We then propagate those suffixes through to dmu32. Note that this does not include a specification of how the masterlist made its way through the whole HELP process."
+    "## The definition of HELP PDR1\n",
+    "Here we take the DR1 definition from the dmu32 yaml files which are the definition of the final and official files. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "yaml_files = glob.glob('./*/meta_main.yml')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/rs548/miniconda3/envs/herschelhelp_internal/lib/python3.6/site-packages/ipykernel_launcher.py:1: YAMLLoadWarning: calling yaml.load() without Loader=... is deprecated, as the default Loader is unsafe. Please read https://msg.pyyaml.org/load for full details.\n",
+      "  \"\"\"Entry point for launching an IPython kernel.\n"
+     ]
+    }
+   ],
+   "source": [
+    "field_yamls = [yaml.load(open(f, 'r')) for f in yaml_files]"
    ]
   },
   {
@@ -98,7 +134,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dr1 = Table.read(\"../dmu1/dr1_overview.fits\")"
+    "dr1 = Table()\n",
+    "dr1['field'] = "
    ]
   },
   {
@@ -725,7 +762,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.6.10"
   }
  },
  "nbformat": 4,
