--- a/dmu32/3_The_end.ipynb
+++ b/dmu32/3_The_end.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -27,7 +27,7 @@
       "This notebook was run with herschelhelp_internal version: \n",
       "1407877 (Mon Feb 4 12:56:29 2019 +0000)\n",
       "This notebook was executed on: \n",
-      "2020-10-29 13:15:24.488030\n"
+      "2020-10-29 15:27:07.370035\n"
      ]
     }
    ],
@@ -40,9 +40,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/rs548/miniconda3/envs/herschelhelp_internal/lib/python3.6/_collections_abc.py:841: MatplotlibDeprecationWarning: \n",
+      "The examples.directory rcparam was deprecated in Matplotlib 3.0 and will be removed in 3.2. In the future, examples will be found relative to the 'datapath' directory.\n",
+      "  self[key] = other[key]\n",
+      "/Users/rs548/miniconda3/envs/herschelhelp_internal/lib/python3.6/_collections_abc.py:841: MatplotlibDeprecationWarning: \n",
+      "The savefig.frameon rcparam was deprecated in Matplotlib 3.1 and will be removed in 3.3.\n",
+      "  self[key] = other[key]\n",
+      "/Users/rs548/miniconda3/envs/herschelhelp_internal/lib/python3.6/_collections_abc.py:841: MatplotlibDeprecationWarning: \n",
+      "The text.latex.unicode rcparam was deprecated in Matplotlib 3.0 and will be removed in 3.2.\n",
+      "  self[key] = other[key]\n",
+      "/Users/rs548/miniconda3/envs/herschelhelp_internal/lib/python3.6/_collections_abc.py:841: MatplotlibDeprecationWarning: \n",
+      "The verbose.fileo rcparam was deprecated in Matplotlib 3.1 and will be removed in 3.3.\n",
+      "  self[key] = other[key]\n",
+      "/Users/rs548/miniconda3/envs/herschelhelp_internal/lib/python3.6/_collections_abc.py:841: MatplotlibDeprecationWarning: \n",
+      "The verbose.level rcparam was deprecated in Matplotlib 3.1 and will be removed in 3.3.\n",
+      "  self[key] = other[key]\n",
+      "/Users/rs548/miniconda3/envs/herschelhelp_internal/lib/python3.6/site-packages/seaborn/apionly.py:9: UserWarning: As seaborn no longer sets a default style on import, the seaborn.apionly module is deprecated. It will be removed in a future version.\n",
+      "  warnings.warn(msg, UserWarning)\n"
+     ]
+    }
+   ],
    "source": [
     "from astropy.table import Table, Column\n",
     "from astropy import units as u\n",
@@ -62,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -106,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -136,7 +160,7 @@
        " 'final': 'dmu_products/dmu32/dmu32_COSMOS/data/COSMOS_20180516_cigale.fits'}"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -147,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -176,6 +200,7 @@
       "XMM-13hr\n",
       "Bootes\n",
       "HDF-N\n",
+      "../dmu32/dmu32_HDF-N/data/HDF-N_20180427_cigale.fits\n",
       "EGS\n"
      ]
     }
@@ -187,7 +212,7 @@
     "final_data = open('help_to_vo.sh', 'w+')\n",
     "for y in field_yamls:\n",
     "    print(y['field'])\n",
-    "    final_help_product = y['final']\n",
+    "    final_help_product = y['final'].replace('dmu_products', '..')\n",
     "    cigale_input = y['cigale']\n",
     "\n",
     "    if os.path.exists(final_help_product):\n",
@@ -225,7 +250,7 @@
    "source": [
     "depths_to_vo = open('depths_to_vo.sh', 'w+')\n",
     "for y in field_yamls:\n",
-    "    final_depth_product = y['depths'].replace('dmu_products', '../')\n",
+    "    final_depth_product = y['depths'].replace('dmu_products', '..')\n",
     "    \n",
     "\n",
     "    if os.path.exists(final_depth_product):\n",
